Added introduction component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
       <li class="tab col s3"><a href="#test4">Contact details</a></li>
     </ul>
   </div>
-  <div id="test1" class="col s12">Test 1</div>
+  <div id="test1" class="col s12">
+    <app-introduction></app-introduction>
+  </div>
   <div id="test2" class="col s12">Test 2</div>
   <div id="test3" class="col s12">Test 3</div>
   <div id="test4" class="col s12">Test 4</div>
