Added education component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
   <div id="test1" class="col s12">
     <app-introduction></app-introduction>
   </div>
-  <div id="test2" class="col s12">Test 2</div>
+  <div id="test2" class="col s12">
+    <app-education></app-education>
+  </div>
   <div id="test3" class="col s12">Test 3</div>
   <div id="test4" class="col s12">Test 4</div>
 </div>
