--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <div class="row">
   <div class="col s12">
     <ul class="tabs">
-      <li class="tab col s3"><a href="#test1">Introduction</a></li>
-      <li class="tab col s3"><a class="active" href="#test2">Education</a></li>
-      <li class="tab col s3 disabled"><a href="#test3">Hobbies</a></li>
-      <li class="tab col s3"><a href="#test4">Contact details</a></li>
+      <li class="tab col s3"><a class="active" href="#introduction">Introduction</a></li>
+      <li class="tab col s3"><a href="#education">Educational History</a></li>
+      <li class="tab col s3"><a href="#technicalskills">Technical Skills</a></li>
+      <li class="tab col s3"><a href="#contactdetails">Contact details</a></li>
     </ul>
   </div>
-  <div id="test1" class="col s12">
+  <div id="introduction" class="col s12">
     <app-introduction></app-introduction>
   </div>
-  <div id="test2" class="col s12">
+  <div id="education" class="col s12">
     <app-education></app-education>
   </div>
-  <div id="test3" class="col s12">Test 3</div>
-  <div id="test4" class="col s12">Test 4</div>
+  <div id="technicalskills" class="col s12">Test 3</div>
+  <div id="contactdetails" class="col s12">Test 4</div>
 </div>
