Added education component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,8 @@
   <div id="education" class="col s12">
     <app-education></app-education>
   </div>
-  <div id="technicalskills" class="col s12">Test 3</div>
+  <div id="technicalskills" class="col s12">
+    <app-technicalskills></app-technicalskills>
+  </div>
   <div id="contactdetails" class="col s12">Test 4</div>
 </div>
