Added technicalskills component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,7 @@
   <div id="technicalskills" class="col s12">
     <app-technicalskills></app-technicalskills>
   </div>
-  <div id="contactdetails" class="col s12">Test 4</div>
+  <div id="contactdetails" class="col s12">
+    <app-contactdetails></app-contactdetails>
+  </div>
 </div>
