--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.tab {
+    background-color: #403f3f !important;
+  }
+    
+  .tabs .indicator {position: absolute; display: none !important; }
+  .tabs .tab a.active { border-bottom: 2px solid#f6b2b5 !important; }
+  
