--- a/src/app/contactdetails/contactdetails.component.html
+++ b/src/app/contactdetails/contactdetails.component.html
@@ -1,11 +1,11 @@
 <div class="card">
   <div class="card-content">
-    <p>Below are my contact details.</p>
+    <h1>Below are my contact details.</h1>
   </div>
   <div class="card-tabs">
     <ul class="tabs tabs-fixed-width">
-      <li class="tab"><a href="#address">Address</a></li>
-      <li class="tab"><a class="active" href="#mobile">Mobile Number</a></li>
+      <li class="tab"><a class="active" href="#address">Address</a></li>
+      <li class="tab"><a href="#mobile">Mobile Number</a></li>
       <li class="tab"><a href="#email">Email Address</a></li>
     </ul>
   </div>
