Added link to github account.

--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -17,7 +17,7 @@
           am looking for an opportunity to establish myself within your company.</p>
       </div>
       <div class="card-action">
-        <a href="#">This is a link</a>
+        <a href="https://github.com/mdattu">Git Hub</a>
       </div>
     </div>
   </div>
